k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami-svc
  namespace: umami
  labels:
    app: umami
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: umami
