k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: umami.sj-tech.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: umami-svc
                port:
                  number: 3000
  tls:
    - hosts:
      - umami.sj-tech.se
      secretName: umami-sj-tech-se-tls
